This commit will link my html and css code for my IP

--- a/ip1.html
+++ b/ip1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>Portfolio Landing Page - Ahmad Ashraf
+      <link rel="stylesheet" href="css/styles.css">
   </head>
 </html>
