This commit will add a picture of me

--- a/ip1.html
+++ b/ip1.html
@@ -3,4 +3,15 @@
   <head>Portfolio Landing Page - Ahmad Ashraf
       <link rel="stylesheet" href="css/styles.css">
   </head>
+  <body>
+      <h1>My name is Ahmad Ashraf. Here's a picture of me.</h1>
+      <img src="images/portfolio-picture.jpg" alt="A picture of me">
+      <p></p>
+      <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+      </ul>
+  </body> 
+
 </html>
