This commit will add About me, My hobbies and a contact form

--- a/ip1.html
+++ b/ip1.html
@@ -6,12 +6,61 @@
   <body>
       <h1>My name is Ahmad Ashraf. Here's a picture of me.</h1>
       <img src="images/portfolio-picture.jpg" alt="A picture of me">
-      <p></p>
+
+      <h2>About Me</h2>
+      <p>I am 21 years old, born and raised in Nairobi, Kenya. I see myself as the quiet, confident type.
+          I went attended high school at Aga Khan Academy. I studied until O levels and then decided to move
+         on and expand my skillset.I decided to join Moringa School because after a lot of research, I came to the conclusion that
+         Moringa School is best insituition for learning programming for me based on the fact that I'm a person who likes to learn things in a practical way, without spending time on irrelevant content.
+        </p>
       <ul>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <h2>My Hobbies</h2>
+          <li>Chess</li>
+          <li>Hiking</li>
+          <li>Yoga</li>
+          <li>Meditation</li>
       </ul>
+
+        <!-- Contact-->
+        <section id="contact">
+            <h2>Get In Touch</h2>
+            <p>Contact Me</p>
+            <div>
+                <div>
+                    <form method="post" action="#">
+                        <div class="form">
+                            <div ><input type="text" name="name" id="name" placeholder="Name" />
+                            </div>
+                            <div ><input type="email" name="email" id="email" placeholder="Email" />
+                            </div>
+                            <div><textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
+                            </div>
+                        </div>
+                    </form>
+                    <ul class="actions">
+                        <li><input type="submit" value="Send Message" /></li>
+                    </ul>
+                </div>
+                <div class="col-4 col-12-small">
+                    <ul class="labeled-icons">
+                        <li>
+                            <h3><span class="label">Address</span></h3>
+                            Parklands.<br />
+                            Nairobi<br />
+                            Kenya
+                        </li>
+                        <li>
+                            <h3><span class="label">Phone</span></h3>
+                            0738372080
+                        </li>
+                        <li>
+                            <h3><span class="label">Email</span></h3>
+                            <a href="#">ahmadashraf159@gmail.com</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
   </body> 
 
 </html>
