--- a/ip1.html
+++ b/ip1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Ahmed Ashraf </title>
+<title>Ahmad Ashraf </title>
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -33,19 +33,6 @@
     that Moringa School is best insituition for learning programming for me based on the fact that I'm a person who likes to
     learn things in a practical way, without spending time on irrelevant content.</p>
     </p>
-    <h3>More Online images</h3>
-    <p>Here are ome of the online images of from my Social Media account</p>
-    <div> 
-        <img class="myimg" style="height:200px;" src="images/portfolio-picture.jpg" alt="A picture of me">
-    </div>
-    <br>
-    <div>
-        <img class="myimg" style="height:200px;" src="images/portfolio-picture.jpg" alt="A picture of me">
-    </div>
-    <br>
-    <div>
-        <img class="myimg" style="height:200px;" src="images/portfolio-picture.jpg" alt="A picture of me">
-    </div>
   </div>
   <div class="hobbies" id="hobbies">
     <h2>My Hobbies</h2>
@@ -69,8 +56,7 @@
 </div>
 <div class="contact" id="contact">
     <div style="text-align:center">
-        <h2>Contact Us</h2>
-        <p>Kindly leave me a message:</p>
+        <h2>Contact Me</h2>
     </div>
     <div class="row">
         <div class="column">
