--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
             <br>
             <h2>Here are links to some projects that I have worked on:</h2>
             <ul>
-                <li><a
-                        href="https://github.com/AhmadSAshraf/My-first-website">My First Website</a>
+                <li><a href="https://github.com/AhmadSAshraf/My-first-website">My First Website</a>
                 </li>
                 <li><a href="https://github.com/AhmadSAshraf/Pet-Website">Pet Website</a>
                 </li>
-                <li><a
-                        href="https://github.com/AhmadSAshraf/hello-world">Hello World</a>
+                <li><a href="https://github.com/AhmadSAshraf/hello-world">Hello World</a>
             </ul>
             </li>
 
