Adding descriptions for the project links.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
             <h2>Here are links to some projects that I have worked on:</h2>
             <ul>
                 <li><a href="https://github.com/AhmadSAshraf/My-first-website">My First Website</a>
+                <p>This is the first website I created at moringa school after learning the basics of web development.</p>
                 </li>
                 <li><a href="https://github.com/AhmadSAshraf/Pet-Website">Pet Website</a>
+                <p>This is a website about a big, fluffy cat named Tango.</p>
                 </li>
                 <li><a href="https://github.com/AhmadSAshraf/hello-world">Hello World</a>
+                <p>This was my first attemt at writing any text using HTML5.</p>
             </ul>
             </li>
 
